<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote ADB activator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="adbPortHint">ADB port number</string>
    <string name="btnStartADB">Start ADB</string>
    <string name="btnStopADB">Stop ADB</string>
    <string name="Ellipses">&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="lblPort">Port:</string>
    <string name="txtDesc">"Please fill in your port number and click Start Adb. If ADB is already running the button will be disabled. I would definitely use the USB cable to push large files or even small files that you really don't want to risk corrupting (partition images you plan on dding, etc).\n\nVery importantly, keep in mind, when your phone is listening for adb via WiFi, it's wide open. Anybody that that the adb installed and knows your device's IP address can access it without a password. "</string>
    <string name="defaultPort">5555</string>
    <string name="clear">" "</string>
    <string name="imageString">Chmeleon</string>
    <string name="txtAbout">This app was created by Chameleon under the GNU General Public License. \n Copyrights 2013</string>

</resources>
