<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStopADB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adbPort"
        android:layout_toRightOf="@+id/btnStartADB"
        android:text="@string/btnStopADB"
        android:onClick="stopADB" />

    <TextView
        android:id="@+id/txtLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStartADB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:text="@string/Ellipses"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/adbPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:hint="@string/adbPortHint"
        android:inputType="number"
        android:maxLength="@integer/max4"
        android:text="@string/defaultPort" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLog"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/ipHolder"
        android:text="@string/txtDesc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/lblPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/adbPort"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/lblPort"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnStartADB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStopADB"
        android:layout_alignBottom="@+id/btnStopADB"
        android:layout_alignLeft="@+id/adbPort"
        android:onClick="startADB"
        android:text="@string/btnStartADB" />

    <TextView
        android:id="@+id/ipHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/lblPort"
        android:adjustViewBounds="false"
        android:contentDescription="@string/imageString"
        android:gravity="center_horizontal"
        android:src="@drawable/chmeleon" />

    <TextView
        android:id="@+id/txtAbout"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="14dp"
        android:text="@string/txtAbout"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
